@@ -3,12 +3,8 @@ import sys
 sys.path.insert(0, os.getcwd())
 
 from twisted.internet import reactor
-try:
-    from adytum.twisted.jsonrpc import Proxy
-except ImportError:
-    from pkg_resources import require
-    require('Twisted-JSONRPC')
-    from adytum.twisted.jsonrpc import Proxy
+
+from txjsonrpc.netstring.jsonrpc import Proxy
 
 def printValue(value):
     print "Result: %s" % str(value)
