@@ -12,9 +12,9 @@ from twisted.web import server, static
 from twisted.internet import reactor, defer
 from twisted.python import log
 
-from adytum import jsonrpclib
-from adytum.twisted.web import jsonrpc
-from adytum.twisted.web.jsonrpc import JSONRPC, addIntrospection
+from txjsonrpc import jsonrpclib
+from txjsonrpc.web import jsonrpc
+from txjsonrpc.web.jsonrpc import JSONRPC, addIntrospection
 
 class TestRuntimeError(RuntimeError):
     pass
@@ -132,7 +132,7 @@ class JSONRPCTestCase(unittest.TestCase):
             d.addCallback(lambda exc, code=code: self.assertEquals(exc.faultCode, code))
             dl.append(d)
         d = defer.DeferredList(dl, fireOnOneErrback=True)
-        d.addCallback(lambda ign: log.flushErrors(TestRuntimeError, TestValueError))
+        d.addCallback(lambda ign: self.flushLoggedErrors())
         return d
 
 
